# paper-sanitizer

./: README.md  clean.txt  demo.txt  pyproject.toml
paper_sanitizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
sanitizer/: cli.py
